<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlmostThere"
    android:background="@color/light_blue"
    android:orientation="vertical">

    <!-- Tanggal Pengerjaan : Selasa, 28 April 2021
         Nim : 10118069
         Deskripsi : membuat halaman Almost There, klik tombol Verify untuk menuju ke halaman
         Verify
         Nama: Muhamad Rizqi Ramdani
         Kelas : IF-2-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/almost"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="100dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step"
            android:textAlignment="center"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textAlignment="center"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_button"
            android:clickable="true"
            android:textAlignment="center"
            android:text="@string/verif"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginTop="70dp"
            android:onClick="Verify">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>


</LinearLayout>