<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyAccount"
    android:background="@color/light_blue"
    android:orientation="vertical">

    <!-- Tanggal Pengerjaan : Selasa, 28 April 2021
         Nim : 10118069
         Deskripsi : membuat halaman Verify Account, dan klik button Send untuk menuju halaman
         User Home
         Nama: Muhamad Rizqi Ramdani
         Kelas : IF-2-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verifacc"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="100dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendverif"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/code"
            android:textAlignment="center"
            android:backgroundTint="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:clickable="true"
            android:textAlignment="center"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:onClick="UserHome">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="doesn't get the code? "
            android:textSize="13dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:paddingLeft="85dp"/>
        <TextView
            android:id="@+id/txtregister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/resend"
            android:textSize="13dp"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </LinearLayout>



</LinearLayout>