<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_blue"
    android:orientation="vertical">

    <!-- Tanggal Pengerjaan : Selasa, 27 April 2021
         Deskripsi : membuat halaman login, kli text Register untuk menuju halaman Register
         Nim : 10118069
         Nama: Muhamad Rizqi Ramdani
         Kelas : IF-2-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_welcome_logo"
            android:scaleType="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/username"
            android:backgroundTint="@color/white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:backgroundTint="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="OR"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_button"
            android:text="@string/facebook"
            android:drawableLeft="@mipmap/ic_welcome_fb_login"
            android:paddingHorizontal="60dp"
            android:textColor="@color/white"
            android:textSize="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="doesn't have account? "
            android:textSize="13dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:paddingLeft="85dp"/>
        <TextView
            android:id="@+id/txtregister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:textSize="13dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:onClick="register"/>
    </LinearLayout>



</LinearLayout>